# snypy-backend

./: .cfignore  .env.example  .gitignore  Procfile  README.md  manifest.yml  pyproject.toml  requirements.txt
.github/workflows/: openapi.yml  test.yml  version.yml
requirements/: base.txt  test.txt
snypy/: .coveragerc  conftest.py  manage.py
snypy/content_pages/: admin.py  apps.py  urls.py
snypy/content_pages/migrations/: 0001_initial.py
snypy/content_pages/models/: managers.py  models.py  querysets.py
snypy/content_pages/rest/: serializers.py  viewsets.py
snypy/content_pages/tests/: test_apps.py
snypy/core/: models.py  tests.py
snypy/core/models/: managers.py  models.py  querysets.py
snypy/core/rest/: permissions.py  serializers.py  viewsets.py
snypy/core/tests/: test_apps.py
snypy/core/utils/: rest_router.py
snypy/fixtures/: languages.json  permissions.json  snippets.json
snypy/shares/: apps.py
snypy/snippets/: admin.py  apps.py  urls.py
snypy/snippets/migrations/: 0001_initial.py  0002_label_and_snippet_user_foreign_key.py  0002_snippet_team.py  0003_date_fields.py  0003_relations.py  0004_fix_related_name.py  0004_snippetfavorite.py  0005_snippetfavorite_user_and_snippet_uniq.py  0005_team_relations.py  max_migration.txt
snypy/snippets/models/: __init__.py  managers.py  models.py  querysets.py
snypy/snippets/rest/: filters.py  serializers.py  viewsets.py
snypy/snippets/tests/: test_apps.py  test_labels.py  test_permissions.py  test_snippet_favorites.py  test_snippet_permissions.py
snypy/snypy/: production.py  settings.py  urls.py  wsgi.py
snypy/teams/: admin.py  urls.py
snypy/teams/migrations/: 0001_initial.py  0002_relations.py  0002_user_editable.py  0003_unique_users_in_team.py  0003_userteam_role.py  max_migration.txt
snypy/teams/models/: managers.py  models.py  querysets.py
snypy/users/: admin.py  signals.py  urls.py
(+25 files in other folders)
