[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snypy-backend"
version = "1.0.0"
description = "REST API for managing code snippets build with Django and Django Rest Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SnyPy Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "django>=4.2,<5.2",
    "djangorestframework>=3.15.2,<3.17",
    "markdown>=3.2,<3.10",
    "django-filter>=2.4,<25.2",
    "django-cors-headers>=4.0,<4.10",
    "django-userforeignkey>=0.3,<0.6",
    "drf-multitokenauth>=2.0.0,<2.2.0",
    "django-rest-registration>=0.8.3,<0.10",
    "django-rest-passwordreset>=1.1,<1.6",
    "drf-spectacular[sidecar]>=0.26.2,<0.29",
    "django-environ>=0.10.0,<0.13",
    "django-gravatar2>=1.4.4,<1.5",
    "sentry-sdk>=2.9.0,<2.44",
]

[project.optional-dependencies]
test = [
    "django-linear-migrations>=2.8.0,<2.20",
    "pytest-django>=4.5.2,<4.12",
    "pytest-cov>=4.1.0,<7.1",
]
dev = [
    "django-linear-migrations>=2.8.0,<2.20",
    "pytest-django>=4.5.2,<4.12",
    "pytest-cov>=4.1.0,<7.1",
    "black>=23.0.0",
]

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
/(
    manage.py
  | migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "snypy.settings"
